# src/swagger.json
@@ -1,17 +1,36 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "REST API about Food",
-    "description": "This web service provides knowledge about different food all over the world.",
-    "version": "1.0.0"
+    "title": "TypeScript REST API about Food",
+    "version": "1.1.0",
+    "description": "The Food API allows you to access food information from different parts of the world.\n### Some awesome features:\n* Add food from your own country\n* Access food from different part of the country\n* Videos for making these food\n",
+    "contact": {
+      "email": "neilspencerrafada@gmail.com"
+    }
   },
   "host": "f00d-rest.onrender.com",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": ["https", "http"],
+  "tags": [
+    {
+      "name": "Information",
+      "description": "Information about Food API"
+    },
+    {
+      "name": "Food",
+      "description": "Everything about Food!"
+    },
+    {
+      "name": "Users",
+      "description": "Everyone who can access Food!"
+    }
+  ],
   "paths": {
     "/": {
       "get": {
-        "description": "Root endpoint",
+        "tags": ["Information"],
+        "summary": "Root Route",
+        "description": "Appetizer of the Food API Project.",
         "parameters": [],
         "responses": {
           "200": {
@@ -22,70 +41,70 @@
     },
     "/api-docs": {
       "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/food/": {
-      "get": {
-        "description": "Gets all the food from the database.",
-        "produces": ["application/json"],
+        "tags": ["Information"],
+        "summary": "SwaggerUI 2.0 Documentation",
+        "description": "Documentation of the Food API Project",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
           }
         }
+      }
+    },
+    "/food/": {
+      "get": {
+        "tags": ["Food"],
+        "summary": "Get all existing Food",
+        "description": "Gets all information from all of the food stored in the database.",
+        "operationId": "getAllFood",
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation"
+          },
+          "404": {
+            "description": "Food not found."
+          }
+        }
       },
       "post": {
+        "tags": ["Food"],
+        "summary": "Add your food to the database",
         "description": "Add food to the database",
+        "operationId": "addFood",
         "produces": ["application/json"],
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Food object that needs to be added to the database",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "recipeName": {
-                  "example": "any"
-                },
-                "localName": {
-                  "example": "any"
-                },
-                "origin": {
-                  "example": "any"
-                },
-                "cookTime": {
-                  "example": "any"
-                },
-                "ingredients": {
-                  "example": "any"
-                },
-                "recommendedVideos": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Food"
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Food has been added"
+          },
+          "400": {
+            "description": "Food data is invalid"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Food not added"
           }
         }
       }
     },
     "/food/{id}": {
       "get": {
-        "description": "Find food with the corresponding route params id",
+        "tags": ["Food"],
+        "summary": "Find Food by ID",
+        "description": "Find food by route params id",
+        "operationId": "getFood",
         "produces": ["application/json"],
         "parameters": [
           {
@@ -97,65 +116,57 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Food Found"
+          },
+          "400": {
+            "description": "Invalid Food ID"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Food Not Found"
           }
         }
       },
       "put": {
+        "tags": ["Food"],
+        "summary": "Update Food by ID",
         "description": "Update information of food in database.",
+        "operationId": "updateFood",
         "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Parameters ID"
           },
           {
             "name": "body",
             "in": "body",
+            "description": "Food object that updates the food to the database",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "recipeName": {
-                  "example": "any"
-                },
-                "localName": {
-                  "example": "any"
-                },
-                "origin": {
-                  "example": "any"
-                },
-                "cookTime": {
-                  "example": "any"
-                },
-                "ingredients": {
-                  "example": "any"
-                },
-                "recommendedVideos": {
-                  "example": "any"
-                },
-                "category": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Food"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Food updated"
+          },
+          "400": {
+            "description": "Invalid Food ID"
           },
           "404": {
-            "description": "Not Found"
+            "description": "No Food Updated"
           }
         }
       },
       "delete": {
+        "tags": ["Food"],
+        "summary": "Delete a food",
         "description": "Deletes food in the database.",
+        "operationId": "deleteFood",
         "parameters": [
           {
             "name": "id",
@@ -166,11 +177,52 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Food deleted"
+          },
+          "400": {
+            "description": "Invalid FoodID"
           },
           "404": {
-            "description": "Not Found"
+            "description": "No Food Deleted"
           }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Food": {
+      "type": "object",
+      "properties": {
+        "foodName": {
+          "type": "string",
+          "description": "Food Name"
+        },
+        "localName": {
+          "type": "string",
+          "description": "Local Food Name"
+        },
+        "origin": {
+          "type": "string",
+          "description": "Origin of the Food (Country)"
+        },
+        "ingredients": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "Array of Ingredients"
+        },
+        "recommendedVideos": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "Videos of making this food"
+        },
+        "category": {
+          "type": "string",
+          "description": "Categories of Food",
+          "enum": ["Filipino", "American", "Mexican", "African", "Chinese"]
         }
       }
     }
